Fixed content borders

--- a/chrome/global/browser.css
+++ b/chrome/global/browser.css
@@ -88,7 +88,7 @@
   }
 
   /* Apply rounded corners to the browser container. */
-  #appcontent .browserStack {
+  #browser .browserStack {
     margin-inline: var(--uc-tweak-rounded-corners-padding) !important;
     margin-block-end: var(--uc-tweak-rounded-corners-padding) !important;
     border-radius: var(--uc-tweak-rounded-corners-radius) !important;
